<resources>
    <!-- AndroidManifest.xml -->
        <string name="app_name">Pig Game Ver3.1</string>
        <string name="title_pig_game_version3_1">Pig Game Ver3.1</string>
        <string name="title_pig_game_version3_1_setting">Settings</string>
        <string name="title_pig_game_version3_1_about">About</string>
        <string name="title_pig_game_version3_1_second_activity">Play Game</string>

    <!-- first_fragment.xml -->
        <string name="welcome_text">Welcome to Pig Game!</string>

        <!-- playerOneLayout -->
        <string name="player_one_label">Player 1</string>
        <string name="player_one_name"></string>

        <!-- playerTwoLayout -->
        <string name="player_two_label">Player 2</string>
        <string name="player_two_name"></string>

        <!-- instructionLayout -->
        <string name="instruction_label">** Instruction **</string>
        <string name="instruction">Check the about menu</string>



        <!-- gotoGameButton -->
        <string name="goto_game_button">Click to start/resume the game</string>



    <!-- menu.xml -->

        <string name="menu_settings">Settings</string>
        <string name="menu_about">About</string>

    <!-- preference.xml -->
        <string name="set_player_name_category">Set Name</string>

        <string name="edit_player_one_name_title">Set player one name</string>
        <string name="edit_player_two_name_title">Set player two name</string>

    <!-- about_activity.xml -->
        <string name="about_game">Player roll one die until they roll 1.
                Sum of the score for the turn will be saved unless they roll 1.
                When they get 1, score will be zero, and turn will be moved to next player.
                Whoever reach to 100 points will be the winner. </string>

    <!-- second_fragment.xml -->
        <!-- playerOneScoreLayout -->
        <string name="player_one_score_label">Player 1 : </string>
        <string name="player_one_score">0</string>
        <!-- playerTwoScoreLayout -->
        <string name="player_two_score_label">Player 2 :</string>
        <string name="player_two_score">0</string>

        <!-- displayLayout -->
        <string name="display_name" />
        <string name="display_name_label">\'s turn AND turn point is </string>
        <string name="display_point">0</string>

        <!-- imageViewLayout -->
        <string name="roll_button">Roll</string>
        <string name="end_turn_button">End</string>

        <!-- newGameButton -->
        <string name="new_game_button">New Game</string>

</resources>
